Creado mediante Colaboratory

--- a/EstandaresInformacion/01_EstandaresInformacion.ipynb
+++ b/EstandaresInformacion/01_EstandaresInformacion.ipynb
@@ -309,9 +309,9 @@
       "source": [
         "# Introducción\n",
         "\n",
-        "Al manipular datos a menudo es necesario intercambiar datos entre disintos usuarios, sistemas operativos, manejadores de bases de datos, etc.\n",
+        "Al manipular datos a menudo es necesario intercambiar datos entre distintos usuarios, sistemas operativos, manejadores de bases de datos, etc.\n",
         "\n",
-        "Es por este motivo que surgen los estándares para el intercambio de información, mediante estos estándares podemos asumir que los actores que formen parte del intercambio de información seguiran las mismas reglas.\n",
+        "Es por este motivo que surgen los estándares para el intercambio de información, mediante estos estándares podemos asumir que los actores que formen parte del intercambio de información seguirán las mismas reglas.\n",
         "\n",
         "El ejemplo más común actualmente de este tipo de estándares son las facturas digitales o electrónicas.\n",
         "\n",
@@ -324,9 +324,9 @@
         "*   RFC.\n",
         "*   etc.\n",
         "\n",
-        "No toda factura luce igual, sin embargo si contienen (o deberían contener) la misma información, así que es por este motivo que para fines de fiscalización, orden y almacenamiento toda factura electrónica se basa en un documento llamado xml, mismo documento que contiene un \"resumen\" con los datos de la facutura.\n",
+        "No toda factura luce igual, sin embargo si contienen (o deberían contener) la misma información, así que es por este motivo que para fines de fiscalización, orden y almacenamiento toda factura electrónica se basa en un documento llamado *xml*, mismo documento que contiene un \"resumen\" con los datos de la factura.\n",
         "\n",
-        "Además estos datos se almacenan siguiendo el estandar (reglas) del formato xml.\n",
+        "Además estos datos se almacenan siguiendo el estándar (reglas) del formato *xml*.\n",
         "\n",
         "<center>\n",
         "<img src=\"https://solucionfactible.com/sfic/manuales/lecciones/emision/emision-cfdi/imagenes/cal-base-aut3.png?raw=1\" width=\"800\"> \n",
@@ -339,15 +339,146 @@
         "id": "QzDivKN1M-xn"
       },
       "source": [
-        "# SQL\n",
+        "# Estándar *XML*\n",
         "\n",
-        "Del ingles *Structured Query Language* (SQL), es el lenguaje que nos permite interactuar con el manejador de bases de datos para acceder a los datos almacenados. Sus principales características son: \n",
+        "Uno de los estándares más ampliamente usado y conocido es el llamado estándar *xml* de sus siglas en ingles eXtensible Markup Languaje, creado a principios de la decada de los 90's con la intensión de compartir información.\n",
         "\n",
-        "* Primer lenguaje en incorporar el modelo relacional para llevar a cabo consultas a los datos almacenados.\n",
-        "* Es un lenguaje libre y de dominio especifico, lo que significa que no es necesario pagar una licencia para poder hacer uso de este.\n",
-        "* Esta diseñado para incorporar los conceptos de calculo y álgebra relacional para llevar a cabo las consultas a la base de datos.\n",
-        "* SQL pasó a ser el estándar del Instituto Nacional Estadounidense de Estándares (ANSI) en 1986 y de la Organización Internacional de Normalización (ISO) en 1987. "
+        "El metalenguaje *xml* fue creado por *World Wide Web Consortium (W3C)* y su caracteristica principal es que, mediante el uso de etiquetas permite definir la gramática de lenguajes específicos, es decir que permite crear las etiquetas y atributos necesarios para el fin que se necesite.\n",
+        "\n",
+        "Otra de sus características y por lo que su uso se ha popularizado, es por que a diferencia de otros lenguajes, *xml* es compatible con el uso para a bases de datos, lo cual es útil cuando diferentes aplicaciones necesitan comunicarse entre si.\n",
+        "\n",
+        "Principalmente se usa en:\n",
+        "\n",
+        "*   Bases de datos.\n",
+        "*   Facturas electrónicas.\n",
+        "*   Interfaces gráficas.\n",
+        "*   Hojas de calculo.\n",
+        "\n",
+        "Estas son algunos de sus usos más comunes, sin embargo *xml* es tan flexible que no esta limitado a estos y puede ser usado en cualquier situación en la que se requiera el uso de un lenguaje sencillo para compartir información.\n",
+        "\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Ejemplos\n",
+        "\n",
+        "Veamos un par de ejemplos muy sencillos de lo que puede ser un documento *xml*.\n",
+        "\n",
+        "Para mostrar estos ejemplos es necesario agregar a la sesión algunos archivos y para hacerlo necesitamos clonarlos desde el repositorio mediante el siguiente comando.\n"
+      ],
+      "metadata": {
+        "id": "CSbPi7vbN_E0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!wget https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/utils/Estandares/alumnos.xml\n",
+        "!wget https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/utils/Estandares/paneles.xml"
+      ],
+      "metadata": {
+        "id": "IfnhF9E9TS0e",
+        "outputId": "0405a18f-6a45-41ed-fd0c-cd9b1ef0ab99",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2022-01-17 04:48:24--  https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/utils/Estandares/alumnos.xml\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 937 [text/plain]\n",
+            "Saving to: ‘alumnos.xml’\n",
+            "\n",
+            "\ralumnos.xml           0%[                    ]       0  --.-KB/s               \ralumnos.xml         100%[===================>]     937  --.-KB/s    in 0s      \n",
+            "\n",
+            "2022-01-17 04:48:25 (53.4 MB/s) - ‘alumnos.xml’ saved [937/937]\n",
+            "\n",
+            "--2022-01-17 04:48:25--  https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/utils/Estandares/paneles.xml\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 848 [text/plain]\n",
+            "Saving to: ‘paneles.xml’\n",
+            "\n",
+            "paneles.xml         100%[===================>]     848  --.-KB/s    in 0s      \n",
+            "\n",
+            "2022-01-17 04:48:25 (31.5 MB/s) - ‘paneles.xml’ saved [848/848]\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### *paneles.xml*\n",
+        "\n",
+        "Cuando se desarrolla un stio web (o cualquier interfaz de usuario) es muy común que los distintos desarrolladores trabajen usando diferentes entornos de desarrollo (*Linux, Windosws, Mac,* etc.), es por este motivo que la información normalmente se transfiera haciendo uso de *xml*.\n",
+        "\n",
+        "Al abrir el documento *paneles.xml* podemos ver información referente a la apariencia de la GUI (Grafic User Interface) de algún sitio de internet. En este documento se muestran los paneles que conforman la página principal así como algunas de sus características.\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Estandares/paneles.png?raw=1\" width=\"800\"> \n",
+        "</center>\n",
+        "\n",
+        "Este es un documento muy sencillo en el que únicamente se muestran paneles, pero para agregar más elementos y sus características es tan sencillo como **agregar más etiquetas** al documento.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "bXBS-5VHYNSa"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### *alumnos.xml*\n",
+        "\n",
+        "En este documento se muestra la información de algunos alumnos y sus tutores. Supongamos que un par de alumnos están desarrollando su proyecto final de la materia de Manejo de Datos y para que no haya diferencias en los datos dentro de la base de datos, ambos deciden usar *xml* como estándar para compartir información.\n",
+        "\n",
+        "De tal manera que al cargar estos datos dentro de su base de datos loca, la información para ambos alumnos deberial lucir similar a estas imagenes.\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Bases/ALUMNOS.png?raw=1\" width=\"600\"> \n",
+        "</center>\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/Bases/tutores.png?raw=1\" width=\"600\"> \n",
+        "</center>\n",
+        "\n",
+        "Estos son solo un par de ejemplos, sin embargo el uso del estándar *xml* es prácticamente ilimitado ya que como metalenguaje nos permite definir los elementos para compartir la información que sea necesaria."
+      ],
+      "metadata": {
+        "id": "ocYh4lZdae7p"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## *Python* y *xml*\n",
+        "\n",
+        "El procesamiento de información almacenada mediante el estándar *xml* haciendo uso del lenguaje *Python* es muy sencilla y existe una infinidad de herramientas (paqueterías) que nos permiten llevar a cabo esta tarea.\n",
+        "\n",
+        "Algunas de las paqueterías que nos permiten procesar (*parsear*) un archivo *xml* mediante *Python* son las siguientes:\n",
+        "\n",
+        "*   *DOM*.\n",
+        "*   *SAX*.\n",
+        "*   *StAX*.\n",
+        "\n",
+        "El proceso para usar estas paqueterías es tan sencillo como leer el documento, usar la paquetería y acceder a la información necesaria dentro del documento *xml*.\n",
+        "\n",
+        "Sin embargo, recientemente han surgido estándares más innovadores y adaptativos a las nuevas tecnologías y necesidades cada vez más cambiantes."
+      ],
+      "metadata": {
+        "id": "c06KU-OFejCs"
+      }
     },
     {
       "cell_type": "markdown",
@@ -355,15 +486,32 @@
         "id": "YPPHIpSaNQWL"
       },
       "source": [
-        "# *MySQL*\n",
+        "# *JSON*\n",
         "\n",
-        "MySQL es el manejador de bases de datos que se utilizará a lo largo del curso, se caracteriza por:\n",
+        "Desarrolladores y profesionales de TI (Tecnologías de Información) necesitan transferir estructuras de datos pobladas de cualquier idioma a formatos reconocibles por otros idiomas y plataformas. Es por eso que *JavaScript Object Notation (JSON)* surge como el estándar de cambio de datos que lo hace posible.\n",
         "\n",
-        "* Es un manejador de bases de datos relacional.\n",
-        "* Manejador de código abierto, es decir que cualquiera puede descargar el código fuente.\n",
-        "* A la par de *Oracle, Microsoft SQL Server, MySQL* es de los manejadores mas populares para el desarrollo web.\n",
-        "* Permite crear y **administrar usuarios** para el acceso a los datos dentro de la base."
+        "*JSON* se ha convertido en un formato de datos popular para los desarrolladores debido a su texto legible por humanos, que es ligero, requiere menos codificación y se procesa más rápido."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Tipos en *JSON*\n",
+        "\n",
+        "Debido a que *JSON* se definió en el lenguaje *JavaScrip*, existen algunos tipos nativos del estándar, como lo son:\n",
+        "\n",
+        "*   Cadena: \"nombre\" : \"Mike\"\n",
+        "*   Número: \"numero\" : 55\n",
+        "*   Booleano: \"FacultadCiencias\" : true\n",
+        "*   Objeto: \"Historial\" :   { \"nombre\":\"Mike\",\"sexo\":\"M\",\"ciudad\": \"CDMX\" }\n",
+        "*   Serie: \"Cursos\" :   [ {\"Manejo de Datos\"}{\"Análisis Numérico\"}{\"Programación en Paralelo\"}]\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "3MeSFDrvkYyp"
+      }
     },
     {
       "cell_type": "markdown",
