Creado mediante Colaboratory

--- a/Bases_de_Datos/02_AlgebraRelacional.ipynb
+++ b/Bases_de_Datos/02_AlgebraRelacional.ipynb
@@ -697,6 +697,21 @@
         "10. Nombre de los clientes que tienen una cuenta con saldo menor a\n",
         "$3,000 y que no tienen préstamo.\n",
         "\n",
+        "Supongamos siguiente esquema.\n",
+        "\n",
+        "$$ALUMNOS (num_cuenta, nombre)$$\n",
+        "$$TUTORIAS (id_tutoria, num_cuenta, id_tutor)$$\n",
+        "$$TUTPRES (id_tutor, nombre_tutor, id_especialidad)$$\n",
+        "$$ESPECIALIDADES (id_especialidad, nombre_especialidad)$$\n",
+        "$$Prestamo (nombreSucursal, numPrestamo, importe)$$\n",
+        "$$Prestatario (nombreCliente, numPrestamo)$$\n",
+        "\n",
+        "1. Expresión que muestre a los alumnos con todos sus atributos.\n",
+        "2. Producto cartesiano de ALUMNOS y TUTORES.\n",
+        "3. Mostrar el id del tutor, el nombre del tutor y el nombre de su especialdiad.\n",
+        "4. Determinar el número de cuenta, id de la tutoria, nombre del alumno y nombre del tutor.\n",
+        "5. Determinar el número de cuenta, id de la tutoria, nombre del alumno y nombre del tutor, con su respectiva especialidad.\n",
+        "\n",
         "\n",
         "\n"
       ],
