Creado mediante Colaboratory

--- a/Bases_de_Datos/03_Manejadores.ipynb
+++ b/Bases_de_Datos/03_Manejadores.ipynb
@@ -719,20 +719,24 @@
       ],
       "metadata": {
         "id": "YLlduGIPfGyF",
-        "outputId": "acdb27c9-ae57-4aee-dbb5-7ae9f9d4864e",
+        "outputId": "eafc50a8-64c2-4d4c-8c44-058231fcd95e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: mysql-connector-python in /usr/local/lib/python3.7/dist-packages (8.0.27)\n",
-            "Requirement already satisfied: protobuf>=3.0.0 in /usr/local/lib/python3.7/dist-packages (from mysql-connector-python) (3.17.3)\n",
-            "Requirement already satisfied: six>=1.9 in /usr/local/lib/python3.7/dist-packages (from protobuf>=3.0.0->mysql-connector-python) (1.15.0)\n"
+            "Collecting mysql-connector-python\n",
+            "  Downloading mysql_connector_python-8.0.27-cp37-cp37m-manylinux1_x86_64.whl (38.0 MB)\n",
+            "\u001b[K     |████████████████████████████████| 38.0 MB 1.2 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: protobuf>=3.0.0 in /usr/local/lib/python3.7/dist-packages (from mysql-connector-python) (3.17.3)\n",
+            "Requirement already satisfied: six>=1.9 in /usr/local/lib/python3.7/dist-packages (from protobuf>=3.0.0->mysql-connector-python) (1.15.0)\n",
+            "Installing collected packages: mysql-connector-python\n",
+            "Successfully installed mysql-connector-python-8.0.27\n"
           ]
         }
       ]
@@ -774,11 +778,11 @@
         "cursor = con.cursor()\n",
         "\n",
         "# consulta en forma de cadena\n",
-        "#consulta = ('SELECT * FROM alumnos')\n",
+        "#consulta = ('SELECT * FROM ALUMNOS')\n",
         "\n",
         "consulta = ('SELECT num_cuenta, nombre, nombre_tutor, nombre_especialidad '\n",
-        "'FROM tutorias natural join alumnos natural join tutores natural join '\n",
-        "'especialidades')\n",
+        "'FROM TUTORIAS natural join ALUMNOS natural join TUTORES natural join '\n",
+        "'ESPECIALIDADES')\n",
         "\n",
         "# ejecucion de la consulta a la base de datos\n",
         "cursor.execute(consulta)\n",
@@ -793,27 +797,27 @@
       ],
       "metadata": {
         "id": "zMenfW19exVG",
-        "outputId": "f2f5df19-4237-4fb7-bf68-99321cdc3684",
+        "outputId": "85335fce-73db-4b67-9d49-1a4ecd04f618",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(1, 'Mike', 'Mark Musk', 'ciencia de datos')\n",
-            "(2, 'Pedro', 'Miguel de Icaza', 'ciencias de la computacion')\n",
             "(3, 'Peter', 'Mario Molina', 'actuaria')\n",
-            "(4, 'Almendra', 'Charles Darwin', 'biologia')\n",
-            "(5, 'Alvaro', 'Isaac Newton', 'matematicas')\n",
-            "(6, 'Canek', 'Mark Musk', 'ciencia de datos')\n",
+            "(2, 'Pedro', 'Miguel de Icaza', 'ciencias de la computacion')\n",
             "(7, 'Sonia', 'Miguel de Icaza', 'ciencias de la computacion')\n",
-            "(8, 'Arturo', 'Mark Musk', 'ciencia de datos')\n",
+            "(5, 'Alvaro', 'Isaac Newton', 'matematicas')\n",
+            "(10, 'Alfa', 'Isaac Newton', 'matematicas')\n",
+            "(4, 'Almendra', 'Charles Darwin', 'biologia')\n",
             "(9, 'Gisel', 'Charles Darwin', 'biologia')\n",
-            "(10, 'Alfa', 'Isaac Newton', 'matematicas')\n"
+            "(1, 'Mike', 'Mark Musk', 'ciencia de datos')\n",
+            "(6, 'Canek', 'Mark Musk', 'ciencia de datos')\n",
+            "(8, 'Arturo', 'Mark Musk', 'ciencia de datos')\n"
           ]
         }
       ]
