Creado mediante Colaboratory

--- a/EstandaresInformacion/01_EstandaresInformacion.ipynb
+++ b/EstandaresInformacion/01_EstandaresInformacion.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "01_EstandaresInformacion.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -531,27 +530,27 @@
       ],
       "metadata": {
         "id": "qhPCvkZwyKJi",
-        "outputId": "d7ddd28c-aa71-4680-c769-16fb785506e7",
+        "outputId": "952eb4fa-dc98-4d37-9f91-9f40220f5dc6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-01-19 05:24:46--  https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/utils/Estandares/ManejoDatos9180.json\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.109.133, 185.199.111.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
+            "--2022-01-19 07:09:06--  https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/utils/Estandares/ManejoDatos9180.json\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 711 [text/plain]\n",
-            "Saving to: ‘ManejoDatos9180.json’\n",
+            "Length: 780 [text/plain]\n",
+            "Saving to: ‘ManejoDatos9180.json.1’\n",
             "\n",
-            "\rManejoDatos9180.jso   0%[                    ]       0  --.-KB/s               \rManejoDatos9180.jso 100%[===================>]     711  --.-KB/s    in 0s      \n",
+            "\rManejoDatos9180.jso   0%[                    ]       0  --.-KB/s               \rManejoDatos9180.jso 100%[===================>]     780  --.-KB/s    in 0s      \n",
             "\n",
-            "2022-01-19 05:24:46 (35.0 MB/s) - ‘ManejoDatos9180.json’ saved [711/711]\n",
+            "2022-01-19 07:09:06 (26.7 MB/s) - ‘ManejoDatos9180.json.1’ saved [780/780]\n",
             "\n"
           ]
         }
@@ -573,12 +572,11 @@
       "source": [
         "# *JSON + Python*\n",
         "\n",
-        "De manera similar a como pudimos usar el manejador *MySQL* con *Python* un estándar (como en este caso *JSON*) se vuelve aun más potente cuando se convina con algun lenguaj de programación.\n",
+        "De manera similar a como pudimos usar el manejador *MySQL* con *Python* un estándar (como en este caso *JSON*) se vuelve aun más potente cuando se combina con algún lenguaje de programación.\n",
         "\n",
-        "Eso significa que mediante el *API* adecuado podemos procesar (*parsear*) de manera aún más sencilla la información contenida en este documento.\n",
+        "Eso significa que mediante el *API* adecuado podemos procesar (*parsear*) de manera aún más sencilla la información contenida en este documento. El termino *parseo* se utiliza en el ámbito del manejo de datos para el proceso mediante el cual se analiza un documento y se obtiene la información que este contiene.\n",
         "\n",
-        "\n",
-        "\n"
+        "Existe una gran cantidad de *API's* en el lenguaje *Python* que nos permiten procesar los datos contenidos en un documento tipo *JSON*, sin embargo en este ejemplo vamos a usar el módulo `json`, que ya viene instalado con la instalación de *Python*."
       ],
       "metadata": {
         "id": "UbA1pJibc21y"
@@ -587,24 +585,73 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Base de datos y servidor\n",
+        "## Crear un documento *JSON*\n",
         "\n",
-        "Como ya se ha mencionado en clase, la base de datos para el curso se encuentra en un servidor de la facultad, mismo que cuenta con una *IP* qpública que permite establecer la conexión a la base de datos desde cualquier computadora, en particular desde una sesión de *Google Colab*.\n",
-        "\n",
-        "Para este ejemplo vamos a usar el servidor *hpc-matematicas-z.fciencias.unam.mx* cuya *IP* pública es *132.248.181.125* y la base de datos *FCiencias*, el usuario *manejo* y la contraseña *prometeo*. Vale la pena mencionar que se esta haciendo uso del **puerto por default** que usa *MySQL*, que es 3306."
+        "Para crear un documento tipo *JSON* desde *Python* solo hace falta importar el módulo `json` y almacenar la información respetando los tipos y reglas del formato *JSON*."
       ],
       "metadata": {
         "id": "lYhb7fiQhS5q"
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# importamos el modulo json\n",
+        "import json\n",
+        "\n",
+        "# diccionario donde se almacenan los datos\n",
+        "datos = {}\n",
+        "\n",
+        "# llave que indica el \n",
+        "datos['alumnos'] = []\n",
+        "\n",
+        "# agregamos el primer alumno\n",
+        "datos['alumnos'].append({\n",
+        "  \"Nombre\": \"Alemán Galicia Diego Leónardo\",\t\n",
+        "  \"Carrera\": \"C. Computación\",\n",
+        "  \"Correo\": \"alemanlex_plus_cool@hotmail.com\",\n",
+        "  \"Telefono\": 4463528288})\n",
+        "\n",
+        "# agregamos el segundo alumno\n",
+        "datos['alumnos'].append({\n",
+        "  \"Nombre\": \"Garcés Garduño Rodrígo Tonatihu\",\t\n",
+        "  \"Carrera\": \"Actuaría\",\n",
+        "  \"Correo\": \"rodrigotonatihu@ciencias.unam.mx\",\n",
+        "  \"Telefono\": 5524410361})\n",
+        "\n",
+        "# agregamos el tercer alumno\n",
+        "datos['alumnos'].append({\n",
+        "  \"Nombre\": \"Pérez Escartin Maya Aranzazu\",\t\n",
+        "  \"Carrera\": \"Actuaría\",\n",
+        "  \"Correo\": \"aranzazu-08@hotmail.com\",\n",
+        "  \"Telefono\": 5537626789})\n",
+        "\n",
+        "# usamos la funcion open para crear un documento\n",
+        "with open('ManejoDatos.json', 'w') as archivo:\n",
+        "  # se vacia el diccionario en el documento\n",
+        "  json.dump(datos, archivo, indent=4, ensure_ascii=False)"
+      ],
+      "metadata": {
+        "id": "x3tB2Tv2AHWf"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "## Conector\n",
+        "Podemos comprobar en el navegador de archivos que el documento *ManejoDatos.json* ya fue creado y contiene la información que acabamos de almacenar usando el estándar *JSON*."
+      ],
+      "metadata": {
+        "id": "DT3UiD9MI40y"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Leer un documento *JSON*\n",
         "\n",
-        "Existen distintos \"conectores\" mediante los cuales podemos establecer la conexión con la base de datos, sin embargo para este ejemplo vamos a instalar el conector oficial de *MySQL*, [aqui](https://dev.mysql.com/doc/connector-python/en/connector-python-introduction.html) puedes encontrar más información al respecto.\n",
-        "\n",
-        "Para instalar el conector en *Google Colab*, es tan sencillo como hacer uso del gestor de instalación de *Python* (*pip*) ejecutando la siguiente celda. Una vez instalado el conector ya podemos usarlo desde cualquier celda de código."
+        "Ya que hemos descargado el documento *ManejoDatos9180.json* ahora lo podemos leer ocupando el módulo `json`."
       ],
       "metadata": {
         "id": "5A6rjVFXii_h"
@@ -613,24 +660,37 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install mysql-connector-python"
+        "# importamos el modulo json\n",
+        "import json\n",
+        "\n",
+        "with open('ManejoDatos9180.json') as archivo:\n",
+        "    datos = json.load(archivo)\n",
+        "    for alumno in datos['alumnos']:\n",
+        "        print('Nombre:', alumno['Nombre'])\n",
+        "        print('Carrera:', alumno['Carrera'])\n",
+        "        print('Correo:', alumno['Correo'])\n",
+        "        print('Telefono:', alumno['Telefono'])\n",
+        "        print('')"
       ],
       "metadata": {
         "id": "YLlduGIPfGyF",
-        "outputId": "acdb27c9-ae57-4aee-dbb5-7ae9f9d4864e",
+        "outputId": "32198e87-1e00-484c-f27a-a29653d0ff46",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 235
         }
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: mysql-connector-python in /usr/local/lib/python3.7/dist-packages (8.0.27)\n",
-            "Requirement already satisfied: protobuf>=3.0.0 in /usr/local/lib/python3.7/dist-packages (from mysql-connector-python) (3.17.3)\n",
-            "Requirement already satisfied: six>=1.9 in /usr/local/lib/python3.7/dist-packages (from protobuf>=3.0.0->mysql-connector-python) (1.15.0)\n"
+          "output_type": "error",
+          "ename": "KeyError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-23-a2341d0be86b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'ManejoDatos9180.json'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0marchivo\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mdatos\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marchivo\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0malumno\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdatos\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'alumnos'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Nombre:'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malumno\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Nombre'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Carrera:'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malumno\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Carrera'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyError\u001b[0m: 'alumnos'"
           ]
         }
       ]
