Creado mediante Colaboratory

--- a/Bases_de_Datos/03_Manejadores.ipynb
+++ b/Bases_de_Datos/03_Manejadores.ipynb
@@ -17,7 +17,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "6300687c89dd47a0a0e347c2892d85c9": {
+        "975969a914154ea0b07e0ba3044da080": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "VBoxModel",
           "model_module_version": "1.5.0",
@@ -32,15 +32,15 @@
             "_view_count": null,
             "_view_module_version": "1.5.0",
             "box_style": "",
-            "layout": "IPY_MODEL_8411ddfe712548f4a0610cbebeb175e3",
+            "layout": "IPY_MODEL_d791ba37a51842e5a8228f29940ef625",
             "_model_module": "@jupyter-widgets/controls",
             "children": [
-              "IPY_MODEL_6743b1dc4be24c5ab65f2b15bde2011e",
-              "IPY_MODEL_ff485a8c88fe4677817be345850b5d78"
+              "IPY_MODEL_a884f0e47e0f4cbab0bfa37ee25886d8",
+              "IPY_MODEL_82c6c53d06b141108f89a63bab7172d2"
             ]
           }
         },
-        "8411ddfe712548f4a0610cbebeb175e3": {
+        "d791ba37a51842e5a8228f29940ef625": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -92,7 +92,7 @@
             "left": null
           }
         },
-        "6743b1dc4be24c5ab65f2b15bde2011e": {
+        "a884f0e47e0f4cbab0bfa37ee25886d8": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DropdownModel",
           "model_module_version": "1.5.0",
@@ -110,11 +110,11 @@
               "Alfa"
             ],
             "_view_name": "DropdownView",
-            "style": "IPY_MODEL_e005b47828a14173825ea6869b91340c",
+            "style": "IPY_MODEL_0d62fb186e2b4c92b1319005aa965a8d",
             "_dom_classes": [],
             "description": "alumno",
             "_model_name": "DropdownModel",
-            "index": 8,
+            "index": 6,
             "_view_module": "@jupyter-widgets/controls",
             "_model_module_version": "1.5.0",
             "_view_count": null,
@@ -122,10 +122,10 @@
             "_view_module_version": "1.5.0",
             "description_tooltip": null,
             "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_8a70d00c3a624746b3fd57da5f3c2998"
+            "layout": "IPY_MODEL_90fe8d84a7a14daca52b8b911f70c66c"
           }
         },
-        "ff485a8c88fe4677817be345850b5d78": {
+        "82c6c53d06b141108f89a63bab7172d2": {
           "model_module": "@jupyter-widgets/output",
           "model_name": "OutputModel",
           "model_module_version": "1.0.0",
@@ -139,7 +139,7 @@
                 "output_type": "stream",
                 "name": "stdout",
                 "text": [
-                  "('Gisel', 'Charles Darwin', 'biologia')\n"
+                  "('Sonia', 'Miguel de Icaza', 'ciencias de la computacion')\n"
                 ]
               }
             ],
@@ -147,11 +147,11 @@
             "_model_module_version": "1.0.0",
             "_view_count": null,
             "_view_module_version": "1.0.0",
-            "layout": "IPY_MODEL_9e747f271a5648d1a46eb6dc037593da",
+            "layout": "IPY_MODEL_95cfacaf10c6494babfa107e0f0f15f7",
             "_model_module": "@jupyter-widgets/output"
           }
         },
-        "e005b47828a14173825ea6869b91340c": {
+        "0d62fb186e2b4c92b1319005aa965a8d": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -166,7 +166,7 @@
             "_model_module": "@jupyter-widgets/controls"
           }
         },
-        "8a70d00c3a624746b3fd57da5f3c2998": {
+        "90fe8d84a7a14daca52b8b911f70c66c": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -218,7 +218,7 @@
             "left": null
           }
         },
-        "9e747f271a5648d1a46eb6dc037593da": {
+        "95cfacaf10c6494babfa107e0f0f15f7": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -719,24 +719,24 @@
       ],
       "metadata": {
         "id": "YLlduGIPfGyF",
-        "outputId": "eafc50a8-64c2-4d4c-8c44-058231fcd95e",
+        "outputId": "ec8ca53d-63ad-4298-f1e4-4c97d8a2657c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Collecting mysql-connector-python\n",
-            "  Downloading mysql_connector_python-8.0.27-cp37-cp37m-manylinux1_x86_64.whl (38.0 MB)\n",
-            "\u001b[K     |████████████████████████████████| 38.0 MB 1.2 MB/s \n",
+            "  Downloading mysql_connector_python-8.0.28-cp37-cp37m-manylinux1_x86_64.whl (37.6 MB)\n",
+            "\u001b[K     |████████████████████████████████| 37.6 MB 55.9 MB/s \n",
             "\u001b[?25hRequirement already satisfied: protobuf>=3.0.0 in /usr/local/lib/python3.7/dist-packages (from mysql-connector-python) (3.17.3)\n",
             "Requirement already satisfied: six>=1.9 in /usr/local/lib/python3.7/dist-packages (from protobuf>=3.0.0->mysql-connector-python) (1.15.0)\n",
             "Installing collected packages: mysql-connector-python\n",
-            "Successfully installed mysql-connector-python-8.0.27\n"
+            "Successfully installed mysql-connector-python-8.0.28\n"
           ]
         }
       ]
@@ -802,7 +802,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -854,7 +854,7 @@
         "cursor = con.cursor()\n",
         "\n",
         "def consulta_alumnos():\n",
-        "  consulta = ('SELECT nombre FROM alumnos')\n",
+        "  consulta = ('SELECT nombre FROM ALUMNOS')\n",
         "  cursor.execute(consulta)\n",
         "  nombre_alumnos = []\n",
         "  for nombre in cursor:\n",
@@ -863,8 +863,8 @@
         "\n",
         "def consulta_tutor(alumno):\n",
         "  consulta = ('SELECT nombre, nombre_tutor, nombre_especialidad '\n",
-        "  'FROM tutorias natural join alumnos natural join tutores natural join '\n",
-        "  'especialidades WHERE nombre = %s')\n",
+        "  'FROM TUTORIAS natural join ALUMNOS natural join TUTORES natural join '\n",
+        "  'ESPECIALIDADES WHERE nombre = %s')\n",
         "  cursor.execute(consulta, (alumno,))\n",
         "  for tupla in cursor:\n",
         "    print(tupla)\n",
@@ -873,28 +873,28 @@
       ],
       "metadata": {
         "id": "_SnBaOuDsmpe",
-        "outputId": "097c1f8c-2eb6-4125-a3f5-49c5b5ef3590",
+        "outputId": "35ee3a5a-ee2d-427b-a283-110029ffd615",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 66,
           "referenced_widgets": [
-            "6300687c89dd47a0a0e347c2892d85c9",
-            "8411ddfe712548f4a0610cbebeb175e3",
-            "6743b1dc4be24c5ab65f2b15bde2011e",
-            "ff485a8c88fe4677817be345850b5d78",
-            "e005b47828a14173825ea6869b91340c",
-            "8a70d00c3a624746b3fd57da5f3c2998",
-            "9e747f271a5648d1a46eb6dc037593da"
+            "975969a914154ea0b07e0ba3044da080",
+            "d791ba37a51842e5a8228f29940ef625",
+            "a884f0e47e0f4cbab0bfa37ee25886d8",
+            "82c6c53d06b141108f89a63bab7172d2",
+            "0d62fb186e2b4c92b1319005aa965a8d",
+            "90fe8d84a7a14daca52b8b911f70c66c",
+            "95cfacaf10c6494babfa107e0f0f15f7"
           ]
         }
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "6300687c89dd47a0a0e347c2892d85c9",
+              "model_id": "975969a914154ea0b07e0ba3044da080",
               "version_minor": 0,
               "version_major": 2
             },
